deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: huckleberry-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: huckleberry-prod
    kubernetes.io/ingress.global-static-ip-name: "huckleberry-client-ingress"
spec:
  tls:
  - secretName: huckleberry-tls
    hosts:
    - huckleberry.gun.io
  rules:
  - host: huckleberry.gun.io
    http:
      paths:
      - backend:
          serviceName: huckleberry-client-service
          servicePort: 80
        path: /*
      - backend:
          serviceName: huckleberry-api-service
          servicePort: 80
        path: /api/*
